<resources>
    <string name="CANCEL">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="Manual_sync">Manual sync</string>
    <string name="NO">NO</string>
    <string name="OK">OK</string>
    <string name="YES">YES</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="absent">Absent</string>
    <string name="accessible">Accessible</string>
    <string name="accuracy">Accuracy: %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="action_state_default">n/a</string>
    <string name="administration_response">Administration Response</string>
    <string name="adoption_year">Adoption year</string>
    <string name="after_flood_">After Flood *</string>
    <string name="allowed_characters">0123456789QWERTYUIOPASDFGHJKLZXCVBNM qwertyuiopasdfghjklzxcvbnm,.+*/_-=!@#%();:?\n</string>
    <string name="allowed_cnic">0123456789</string>
    <string name="allowed_comments">0123456789QWERTYUIOPASDFGHJKLZXCVBNM qwertyuiopasdfghjklzxcvbnm,.\n</string>
    <string name="allowed_name">QWERTYUIOPASDFGHJKLZXCVBNM qwertyuiopasdfghjklzxcvbnm</string>
    <string name="allowed_order_no">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm0123456789-_/#():</string>
    <string name="ampm_circle_radius_multiplier">0.19</string>
    <string name="app_name">SSMS</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appointment_order">Appointment Order</string>
    <string name="appointment_order_">Appointment Order *</string>
    <string name="attendAbsent">Absent</string>
    <string name="attendPresent">Present</string>
    <string name="attendance">Attendance</string>
    <string name="attendance_">Attendance *</string>
    <string name="authority_order">Authority Order</string>
    <string name="authority_order_">Authority Order *</string>
    <string name="authorization_session_expired_message">Your Authorization session has expired. Please complete your monitoring and backup data if needed, then login again</string>
    <string name="available">Available</string>
    <string name="available_and_functional">Available and functional</string>
    <string name="available_but_not_functional">Available but not functional</string>
    <string name="average">Average</string>
    <string name="bad_accuracy">Currently, mobile phone GPS is not able to fetch location due to poor GPS signal, please turn on mobile data or WIFI and move your phone as mentioned in the below picture via changing your position to improve GPS signal.</string>
    <string name="bank_name">Bank Name *</string>
    <string name="biology_lab">Biology Lab *</string>
    <string name="blackboards">Blackboards</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="boundary_wall">Boundary Wall</string>
    <string name="boundary_wall_">Boundary Wall *</string>
    <string name="branch_code">Branch Code *</string>
    <string name="building_under_illegal_occupation">Building Under Illegal Occupation</string>
    <string name="camera">Camera</string>
    <string name="capture_button_alt">Capture</string>
    <string name="census">Census</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charts">Charts</string>
    <string name="chemistry_lab">Chemistry Lab *</string>
    <string name="chip_text">Chip text</string>
    <string name="circle_radius_multiplier">0.82</string>
    <string name="circle_radius_multiplier_24HourMode">0.85</string>
    <string name="class_1">Class 1</string>
    <string name="class_10">Class 10</string>
    <string name="class_11">Class 11</string>
    <string name="class_12">Class 12</string>
    <string name="class_2">Class 2</string>
    <string name="class_3">Class 3</string>
    <string name="class_4">Class 4</string>
    <string name="class_5">Class 5</string>
    <string name="class_6">Class 6</string>
    <string name="class_7">Class 7</string>
    <string name="class_8">Class 8</string>
    <string name="class_9">Class 9</string>
    <string name="classrooms">Classrooms</string>
    <string name="cleanliness">Cleanliness *</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_camera">Close Camera</string>
    <string name="close_scanner_btn">Close</string>
    <string name="closed">Closed</string>
    <string name="cnic">CNIC</string>
    <string name="cnic_">CNIC *</string>
    <string name="cnic_e_g">CNIC (e.g: xxxxxxxxxxxxx)</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="comments">Comments</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="community_centre">Community Centre *</string>
    <string name="computer_lab">Computer Lab *</string>
    <string name="computers">Computers</string>
    <string name="contact_no">Contact No</string>
    <string name="contact_no_">Contact No. *</string>
    <string name="cupboards">Cupboards / Almirahs</string>
    <string name="damage_done">Damage Done</string>
    <string name="damage_done_">Damage Done *</string>
    <string name="database_create_text">Created:</string>
    <string name="database_description_text">Description:</string>
    <string name="database_list_clear">Clear database</string>
    <string name="database_list_done">Done</string>
    <string name="database_list_size_text">Database size:</string>
    <string name="database_list_title">Matcher database contents</string>
    <string name="database_modify_text">Modified:</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_">Date of Birth *</string>
    <string name="day_of_week_label_typeface">sans-serif-light</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="deleted_key">deleted</string>
    <string name="designation">Designation</string>
    <string name="designation_">Designation *</string>
    <string name="device_count_default">n/a</string>
    <string name="device_count_name"># SCANNERS</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="district_administration_offices">District Administration/Offices *</string>
    <string name="doYouWantStartBackUpFile">Do you want to start Manual Sync?</string>
    <string name="doYouWantStartmanualFilebeforeLogout">Do you want Manual Sync before logout?</string>
    <string name="does_the_school_have_a_building">Does the school have a building?</string>
    <string name="done_label">Done</string>
    <string name="download_error">Downloading error</string>
    <string name="drinking_water">Drinking Water</string>
    <string name="ece_katchi">ECE/Katchi</string>
    <string name="education_quality">Education Quality</string>
    <string name="electric_fans">Electric Fans</string>
    <string name="electric_motors">Electric Motors</string>
    <string name="electricity">Electricity</string>
    <string name="email_image">E-mail image</string>
    <string name="employee">Employee</string>
    <string name="employee_">Employee *</string>
    <string name="employee_cnic">Employee CNIC</string>
    <string name="employee_cnic_">Employee CNIC *</string>
    <string name="frame_time_default">n/a</string>
    <string name="frame_time_name">FRAME TIME</string>
    <string name="logo_img">Logo</string>
    <string name="open_scanner_btn">Open</string>
    <string name="preview_image">Preview</string>
    <string name="refresh_btn">Refresh scanners</string>
    <string name="select_an_option">Select an option</string>
    <string name="start_capture_btn">Start</string>
    <string name="status_default">n/a</string>
    <string name="status_name">STATUS</string>
    <string name="stop_capture_btn">Stop</string>
    <string name="view_database_btn">View database</string>
</resources>