<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/infoLayout"
    android:background="#ffffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_weight="1">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/logo"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/logo_img"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp">
            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#ff0060a0"
                android:gravity="center"
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textIsSelectable="false"/>
            <TextView
                android:textSize="12sp"
                android:textColor="#ff0060a0"
                android:gravity="center"
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textIsSelectable="false"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textSize="16sp"
                android:id="@+id/refresh_btn"
                android:padding="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_btn"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:textSize="16sp"
                android:id="@+id/open_scanner_btn"
                android:padding="10sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/open_scanner_btn"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:textSize="16sp"
                android:id="@+id/close_scanner_btn"
                android:padding="10sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/close_scanner_btn"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textSize="16sp"
                android:gravity="fill_vertical"
                android:id="@+id/view_database_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/view_database_btn"
                style="?android:attr/buttonBarButtonStyle"/>
            <Spinner
                android:textSize="16sp"
                android:textColor="#ff000000"
                android:id="@+id/capture_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:textSize="16sp"
                android:textColor="#ff000000"
                android:id="@+id/action_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:textSize="16sp"
                android:id="@+id/start_capture_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/start_capture_btn"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:textSize="16sp"
                android:id="@+id/stop_capture_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/stop_capture_btn"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
        <TextView
            android:textSize="14sp"
            android:textColor="#ff000000"
            android:gravity="center"
            android:id="@+id/action_state"
            android:background="#ffbbbbdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/action_state_default"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:textSize="14sp"
                    android:textColor="#ff000000"
                    android:gravity="center"
                    android:id="@+id/device_count_title"
                    android:background="#ffccccee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_count_name"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="#ff000000"
                    android:gravity="center"
                    android:id="@+id/device_count"
                    android:background="#ffeeeeff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_count_default"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:textSize="14sp"
                    android:textColor="#ff000000"
                    android:gravity="center"
                    android:id="@+id/status_title"
                    android:background="#ffccccee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_name"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="#ff000000"
                    android:gravity="center"
                    android:id="@+id/status"
                    android:background="#ffeeeeff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_default"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:textSize="14sp"
                    android:textColor="#ff000000"
                    android:gravity="center"
                    android:id="@+id/frame_time_title"
                    android:background="#ffccccee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frame_time_name"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="#ff000000"
                    android:gravity="center"
                    android:id="@+id/frame_time"
                    android:background="#ffeeeeff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frame_time_default"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_weight="1">
        <TextView
            android:textSize="16sp"
            android:textColor="#ff000000"
            android:gravity="center"
            android:id="@+id/description"
            android:background="#ffff0000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text=""/>
        <LinearLayout
            android:orientation="horizontal"
            android:background="#ffcccccc"
            android:layout_width="match_parent"
            android:layout_height="12sp">
            <TextView
                android:textSize="12sp"
                android:id="@+id/scan_states_color1"
                android:background="#ff00ff00"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text=""
                android:layout_weight="1"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/scan_states_color2"
                android:background="#ff0000ff"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10sp"
                android:text=""
                android:layout_weight="1"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/scan_states_color3"
                android:background="#ff00ffff"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10sp"
                android:text=""
                android:layout_weight="1"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/scan_states_color4"
                android:background="#ffff00ff"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10sp"
                android:text=""
                android:layout_weight="1"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/preview_image"
            android:background="#ffeeeeee"
            android:paddingLeft="14sp"
            android:paddingRight="14sp"
            android:paddingBottom="14sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp"
            android:contentDescription="@string/preview_image"/>
    </LinearLayout>
</LinearLayout>
