<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp">
    <TextView
        android:textSize="@dimen/textsize_medium"
        android:textStyle="bold"
        android:textColor="#ff0060a0"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/database_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/database_list_title"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp">
        <TextView
            android:textSize="@dimen/textsize_small"
            android:textColor="#ff0060a0"
            android:id="@+id/database_list_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/database_list_size_text"/>
        <TextView
            android:textSize="@dimen/textsize_small"
            android:textColor="#ff000000"
            android:id="@+id/database_list_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textSize="@dimen/textsize_medium"
            android:id="@+id/database_list_done"
            android:padding="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_list_done"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:textSize="@dimen/textsize_medium"
            android:id="@+id/database_list_clear"
            android:padding="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_list_clear"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawSelectorOnTop="false"
        android:layout_weight="1"/>
</LinearLayout>
