<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/s16"
        android:textStyle="bold"
        android:textColor="@color/dark_grey_color"
        android:gravity="center"
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x25"
        android:text="@string/select_an_option"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:layout_below="@+id/txt_title">
        <ImageView
            android:id="@+id/option_pdf"
            android:layout_width="@dimen/x60"
            android:layout_height="@dimen/x60"
            android:src="@drawable/pdf"
            android:layout_marginEnd="@dimen/x30"/>
        <View
            android:background="@color/light_gray"
            android:layout_width="@dimen/x1"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/option_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x30">
            <ImageView
                android:layout_width="@dimen/x60"
                android:layout_height="@dimen/x60"
                android:src="@drawable/ic_option_camera"/>
            <TextView
                android:textSize="@dimen/s16"
                android:textStyle="bold"
                android:textColor="@color/dark_grey_color"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:textSize="@dimen/s16"
        android:textColor="@color/colorPrimary"
        android:id="@+id/btn_cancel"
        android:paddingLeft="@dimen/x30"
        android:paddingRight="@dimen/x30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:text="@string/CANCEL"
        android:layout_below="@+id/options_layout"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
</RelativeLayout>
