<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp">
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#ff0060a0"
        android:id="@+id/database_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/textsize_small"
            android:textColor="#ff0060a0"
            android:id="@+id/database_create_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/database_create_text"
            android:textIsSelectable="true"/>
        <TextView
            android:textSize="@dimen/textsize_small"
            android:textColor="#ff000000"
            android:id="@+id/database_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/textsize_small"
            android:textColor="#ff0060a0"
            android:id="@+id/database_modify_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/database_modify_text"
            android:textIsSelectable="true"/>
        <TextView
            android:textSize="@dimen/textsize_small"
            android:textColor="#ff000000"
            android:id="@+id/database_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/textsize_small"
            android:textColor="#ff0060a0"
            android:id="@+id/database_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/database_description_text"
            android:textIsSelectable="true"/>
        <TextView
            android:textSize="@dimen/textsize_small"
            android:textColor="#ff000000"
            android:id="@+id/database_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"/>
    </LinearLayout>
</LinearLayout>
